<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="@dimen/layout_300"
    android:background="#0DFFFFFF"
    >

    <LinearLayout
        android:layout_marginTop="@dimen/margin_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/draw_item"
        android:id="@+id/layout_botton1"
        >
        <TextView
            android:layout_marginTop="@dimen/margin_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/botton1"
            android:text="@string/Khachhang"
            android:textColor="@color/colorText_Blue"
            android:textSize="@dimen/text_18"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
        <View
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_1"
            android:layout_alignParentBottom="true"
            android:background="@color/color_light_high"
            />
        <TextView
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/botton_nhacungcap"
            android:text="@string/Nhacungcap"
            android:textColor="@color/colorText_Blue"
            android:textSize="@dimen/text_18"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_big"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_width_heigth_mid"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_below="@id/layout_botton1"
        android:id="@+id/tvHuy"
        android:text="@string/Huy"
        android:textColor="@color/colorText_Blue"
        android:textSize="@dimen/text_18"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/draw_item"
        />
</RelativeLayout>