<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SearchActivity"
    android:background="@color/color_light_high"
    >

    <include layout="@layout/toolbar_search" />

    <LinearLayout
        android:layout_marginTop="@dimen/layout_50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layoutTim"
        >
        <TextView
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timtheo"
            android:textStyle="bold"
            android:textSize="@dimen/text_12"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            >
            <EditText
                android:background="@drawable/draw_edit_text"
                android:layout_marginTop="@dimen/margin_mid"
                android:layout_marginLeft="@dimen/margin_mid"
                android:layout_marginRight="@dimen/margin_mid"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_width_heigth_mid"
                android:hint="@string/maten"
                android:textSize="@dimen/text_12"
                android:paddingLeft="@dimen/margin_mid"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:id="@+id/edMaTenDT"
                />
            <EditText
                android:background="@drawable/draw_edit_text"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_mid"
                android:layout_marginRight="@dimen/margin_mid"
                android:layout_marginBottom="@dimen/margin_mid"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_width_heigth_mid"
                android:hint="@string/email"
                android:textSize="@dimen/text_12"
                android:paddingLeft="@dimen/margin_mid"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:id="@+id/edEmail"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/layoutTim"
        android:id="@+id/layoutnhom"
        >
        <TextView
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nhom"
            android:textStyle="bold"
            android:textSize="@dimen/text_12"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_mid"
                android:text="@string/tatca"
                android:textSize="@dimen/text_13"
                android:textColor="@android:color/black"
                android:id="@+id/tvTatca1"
                />
            <ImageView
                android:layout_width="@dimen/layout_25"
                android:layout_height="@dimen/layout_25"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_right_black"
                android:id="@+id/rightback"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/layoutnhom"
        android:id="@+id/layoutloai"
        >
        <TextView
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loai"
            android:textStyle="bold"
            android:textSize="@dimen/text_12"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_mid"
                android:id="@+id/Tatca2"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tatca"
                    android:textSize="@dimen/text_13"
                    android:textColor="@android:color/black"
                    android:id="@+id/tvTatca2"
                    />
                <ImageView
                    android:layout_width="@dimen/layout_width_heigth_small"
                    android:layout_height="@dimen/layout_width_heigth_small"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_small"
                    android:src="@drawable/ic_check"
                    android:id="@+id/check1" />
            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/layout_1"
                android:layout_below="@id/Tatca2"
                android:background="@color/color_light_high2"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_5"
                android:layout_marginLeft="@dimen/margin_mid"
                android:layout_below="@id/Tatca2"
                android:id="@+id/Khachhangmua">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Khachhang"
                    android:textSize="@dimen/text_13"
                    android:textColor="@color/colorText_light"
                    android:id="@+id/tvKhachhangmua"
                    />
                <ImageView
                    android:visibility="invisible"
                    android:layout_width="@dimen/layout_width_heigth_small"
                    android:layout_height="@dimen/layout_width_heigth_small"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_small"
                    android:src="@drawable/ic_check"
                    android:id="@+id/check2" />
            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/layout_1"
                android:layout_below="@id/Khachhangmua"
                android:background="@color/color_light_high2"
                android:layout_marginTop="@dimen/margin_5"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_mid"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_mid"
                android:layout_below="@id/Khachhangmua"
                android:id="@+id/Nhacungcap">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Nhacungcap"
                    android:textSize="@dimen/text_13"
                    android:textColor="@color/colorText_light"
                    android:id="@+id/tvNhacungcap"
                    />
                <ImageView
                    android:visibility="invisible"
                    android:layout_width="@dimen/layout_width_heigth_small"
                    android:layout_height="@dimen/layout_width_heigth_small"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_small"
                    android:src="@drawable/ic_check"
                    android:id="@+id/check3" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/layoutloai"
        >
        <TextView
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nhom"
            android:textStyle="bold"
            android:textSize="@dimen/text_12"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="@dimen/layout_150"
                android:layout_height="@dimen/layout_25"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_big"
                android:gravity="center"
                android:text="@string/dang"
                android:textSize="@dimen/text_12"
                android:textColor="@android:color/white"
                android:background="@drawable/draw_item_red"
                android:id="@+id/danghd"
                />
            <TextView
                android:layout_width="@dimen/layout_150"
                android:layout_height="@dimen/layout_25"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_big"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/ngung"
                android:textSize="@dimen/text_12"
                android:textColor="@android:color/black"
                android:background="@drawable/draw_item"
                android:id="@+id/ngunghd"
                />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>