<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ScanQRActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layoutqr1"
        >
        <androidx.appcompat.widget.Toolbar
            app:title=""
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_width_heigth_mid"
            android:background="@color/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >
            <TextView
                android:id="@+id/tvDong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dong"
                android:textSize="@dimen/text_15"
                android:textColor="@android:color/white"
                />
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quet"
                android:textSize="@dimen/text_15"
                android:textColor="@android:color/white"
                />
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutqr1"
        >
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/layout_width_heigth_mid"
            />
        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_width_heigth_mid"
            >
            <ImageView
                android:layout_centerVertical="true"
                android:layout_width="@dimen/layout_width_heigth_small"
                android:layout_height="@dimen/layout_width_heigth_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:scaleType="center"
                android:src="@drawable/barcode"
                android:id="@+id/ivBarcode"
                />
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/ivBarcode"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/Datmaqr"
                android:textSize="@dimen/text_15"
                android:textColor="@android:color/black"
                />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>