<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout1"
        >
        <androidx.appcompat.widget.Toolbar
            app:title=""
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_width_heigth_mid"
            android:background="@color/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/khachhangnhacungcap"
                android:textSize="@dimen/text_12"
                android:textColor="@android:color/white"
                />
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <RelativeLayout
        android:layout_below="@id/layout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_25"
        android:background="@color/color_light"
        android:id="@+id/layout2"
        >
        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Khachhang"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_13"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/margin_big"
            android:id="@+id/tvKhachHang"
            />
        <ImageView
            android:layout_centerVertical="true"
            android:layout_width="@dimen/layout_width_heigth_small"
            android:layout_height="@dimen/layout_width_heigth_small"
            android:src="@drawable/down"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_toRightOf="@id/tvKhachHang"
            />
        <ImageView
            android:layout_centerVertical="true"
            android:layout_width="@dimen/layout_width_heigth_small"
            android:layout_height="@dimen/layout_width_heigth_small"
            android:src="@drawable/search"
            android:layout_marginRight="@dimen/margin_big"
            android:layout_toLeftOf="@id/filter"
            android:id="@+id/imageSearch"
            />
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/filter"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_big"
            android:layout_gravity="center"
            android:layout_width="@dimen/layout_width_heigth_small"
            android:layout_height="@dimen/layout_width_heigth_small"
            android:src="@drawable/filter"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_small"
        android:layout_below="@id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_big"
            android:text="@string/Tong"
            android:textSize="@dimen/text_12"
            android:textColor="@android:color/black"
            android:id="@+id/tvTong"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView"
            />
    </LinearLayout>
</RelativeLayout>